test/classes/vass/generic-var-const-field-error.chpl
class C {
  const cst;
}

var c = new C();
writeln(c);

class D {
  var vbl;
}

var d = new D();
writeln(d);
